--- a/TipTools/TipTools-master/README
+++ b/TipTools/TipTools-master/README
@@ -3,5 +3,5 @@ TipTools consists of two applications:
   as target formats
 - TipView - a viewer for displaying various image formats on Atari XL/XE
 
-See http://epi.atari8.info/tiptools.php for more information.
+See XDSN.MINER@PROTON.ME for more information.
 
